--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "^3.1.0",
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-webview": "^13.3.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
