--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0",
